force-app/main/default/objects/Job_Application__c/Job_Application__c.object-meta.xml
<CustomObject>
    <description>This is junction Object between Job Postings and Applicants (contacts). Each Job Posting can have multiple applications and each applicant can apply to multiple job Postings</description>
    <label>Job Application</label>
    <nameField>
        <displayFormat>JobApp-{0000}</displayFormat>
        <label>Job Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>